[package]
name = "time-parse"
version = "0.2.1-alpha.0"
authors = ["Chris West (Faux) <git@goeswhere.com>", "Frederic Sauvage <frederick.sauvage@gmail.com>"]

categories = [
    "parsing",
]
description = "Parse iso8601 periods"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/FauxFaux/time-parse"

edition = "2021"

[badges.travis-ci]
repository = "FauxFaux/time-parse"

[dependencies]
anyhow = "1"
nom = "7.1.3"

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "duration_bench"
harness = false

[profile.bench]
lto = true
